--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap');
+
 *{
 	box-sizing: border-box;
 }
@@ -31,17 +32,19 @@ header, footer{
 .blanc{
 	width: 27px;
 	height: 29px;
-	margin-top: 4%;
+	margin-top: 1%;
+  margin-bottom: 4%;
 }
 footer p{
 	margin-left: 5%;
 	margin-right: 2%;
+  margin-top: 2%;
 }
 a{
 	color: #ffffff;
 	text-decoration: none;
 	margin-left: 2%;
-	margin-top: 4.5%;
+	margin-top: 2%;
 }
 .container{
 	display: flex;
@@ -54,8 +57,9 @@ a{
 
 .countdown{
 	order: 1;
-	flex: 1 1 50%;
+	flex: 1 1 80%;
 	width: 80%;
+  color: #ffffff;
 }
 .countDown_cont {
   font-family: 'Nunito', sans-serif;
@@ -63,7 +67,7 @@ a{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-content: center;
+  align-content: flex-end;
   justify-content: flex-end;
   color: #ffffff;
   padding-top: 2rem;
@@ -83,43 +87,34 @@ a{
     align-items: flex-start;
 }
 
-.countDown_interval_cont:nth-child(n + 1):not(:last-child) {
-  margin-right: 10em;
-}
-
-.countDown_interval_basic_cont {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
 .countDown_interval_basic_cont_description {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 0.3em;
-  font-size: 1.5em;
-  font-weight: bold;
-  color: #000;
-  text-shadow: 0.1em 0.1em 0.1em #000000;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 0.3em;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #ffffff; 
+    /* text-shadow: 0.1em 0.1em 0.1em #000000; */
 }
+
+.countDown_interval_cont:nth-child(n + 1):not(:last-child) {
+  margin-right: 3em;
+}
+
 
 .countDown_digit_cont {
   -webkit-perspective: 3.2em;
   perspective: 3.2em;
-  box-shadow: 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.2);
   width: 1em;
   height: 1.6em;
   position: relative;
   line-height: 1.6em;
-  font-size: 1em;
+  font-size: 40px;
   font-weight: bold;
   border-radius: 0.08em;
+  border: 1px solid #ffffff;
 }
 
 .countDown_digit_cont:nth-child(n + 1):not(:last-child) {
@@ -287,7 +282,7 @@ a{
   }
 }
 h2{
-	color: #ff69b4;
+	color: #ffffff;
 	border:3px solid #ffffff;
 	text-align: center;
 	padding-top: 4em;
@@ -307,43 +302,54 @@ h2{
 }
 .box2{
 	order: 2;
-	flex: 1 1 50%;
+	flex: 1 1 20%;
 	width: 80%;
 }
 .box_a{
+  font-weight: bolder;
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
+  margin-bottom: -20px;
+  margin-right: 3em;
 }
 .box_b{
-	padding-top: 5em;
-	padding-bottom: 6em;
 	display: inline-flex;
 	align-items: center;
 	vertical-align: flex-end;
 	justify-content: space-around;
 	height: 100%
 }
-span{
-	font-size: 20px;
-	border: 1px solid #f1f1f1;
-	border-radius: 3px;
-	background: #00ff00;
-	padding: 5px;
+.box_b .box_A,
+.box_b .box_B{
+  margin-right: 15px;
 }
+
 .box3{
-	display: grid;
-	font-size: 10px;
+	font-size: 15px;
+  font-weight: bolder;
 	order: 3;
 	flex: 1 1 100%;
 }
-p{
+ul{
+  list-style: none;
 	margin: 0;
 	padding: 0;
 }
+li{
+  color: #ffffff;
+  margin-top: 7px;
+}
+
+
+
+
 @media only screen and (min-width: 768px){
 	body{
 		min-height: 634px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 150%;
 	}
 	.title{
 		letter-spacing: 3px;
@@ -367,15 +373,14 @@ p{
 		height: 100%;
 	}
 	
-	
 	.countdown{
-		flex: 1 1 100%;
+		  flex: 1 1 100%;
 	    display: flex;
     	flex-direction: row;
     	height: 100%;
     	width: 100%;
+      margin-left: 10%;
 }
-
 
 	.countDown_cont{
 		display:flex;
@@ -391,21 +396,42 @@ p{
 
 	.box2{
 		height: 100%;
-		
 		flex: 1;
 	}
-	.box3{
-		display: inline-flex;
-		align-items: center;
-		justify-content: center;
-			
+  .box_a{
+    height: 10%;
+    letter-spacing: 5px;
+    font-weight: bolder;
+    display: inline;
+    margin-left: 2em;
+  }
+  .box_b{
+    height: 60%;
+    margin-left: 2em;
+    margin-bottom: 5px;
+  }
+  .box_b img{
+      width: 40px;
+  }
+.box_b .box_A,
+.box_b .box_B{
+  margin-right: 15px;
+}
+	.box3 {
+    display: flex;
 		height: 100%;
 		flex: 1;
-		letter-spacing: 10px;
+    font-weight: bolder;
+    margin-bottom: 6em;
 	}
-
+  ul > li{
+    display: inline;
+  }
+ li{
+    margin-left: 3px;
+ }
 	.countDown__interval_basic_cont{
-		display: flex;
+		  display: flex;
 	    flex-direction: column;
 	    align-items: flex-start;
 	}
@@ -418,8 +444,45 @@ p{
 
 @media only screen and (min-width: 1024px){
 	body{
-		background: #00ff00;
+		  background: url(earth.jpg);
+      background-position: center;
+      background-size: 140%;
 	}
+  .countDown_cont{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    border-left: 20%;
+    margin-left: 150px;
+    height: 100%;
+  }
+
+.box_a{ 
+    letter-spacing: 5px;
+    font-weight: bolder;
+    font-size: 20px
+}
+.box_3{
+    line-height: 2;
+    margin-left: 5px;
+    margin-bottom: 0;
+    display: flex;
+    align-items: flex-start;
+  }
+  ul li{
+    font-size: 20px;
+    font-weight: bolder;
+    margin-left: 5px;
+  }
+
+  /* Rectification de la hauteur du Footer  */
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
+  }
+  
 	.title{
 		letter-spacing: 4px;
 		margin-left: 20%;
@@ -427,7 +490,7 @@ p{
 		padding-right: 150px;
 	}
 	.blanc{
-		margin-top: 1%;
+		margin-top: 1.5%;
 	}
 	a{
 	margin-left: 2%;
